Signup Page Implementation

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'Aeonik';
+    src: url('/assets/fonts/fonnts.com-Aeonik-Regular.ttf') format('truetype');
+  }
+  
+@font-face {
+    font-family: 'Aeonik-Bold';
+    src: url('/assets/fonts/fonnts.com-Aeonik-Bold.ttf') format('truetype');
+  }
+  @font-face {
+    font-family: 'Aeonik-Bold';
+    src: url('/assets/fonts/InstrumentSans-VariableFont_wdth,wght.ttf') format('truetype');
+  }
