Major Interface Updates

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,6 @@
     src: url('/assets/fonts/fonnts.com-Aeonik-Bold.ttf') format('truetype');
   }
   @font-face {
-    font-family: 'Aeonik-Bold';
+    font-family: 'InstrumentSans';
     src: url('/assets/fonts/InstrumentSans-VariableFont_wdth,wght.ttf') format('truetype');
   }
